Comments to HTML, CSS, and JavaScript; Projects evenly aligned along with adding figcaptions, footer contact me filled in, JavaScript code sections commented out until fix for 'a href' color preventing to be white in dark mode

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,24 +1,34 @@
+/* root for variables  */
 :root {
     --background-color: #e9ecef;
     --border-color: #ccd5ae;
     --text-color: #33272a;
+    --dark-mode: rgb(23, 26, 35)
 }
 
+/* universal styling */
 * {
-    color: var(--text-color);
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
 
+/* adjustments to body styling */
 body {
     background-color: var(--background-color);
+    color: var(--text-color);
     border: 6px solid;
     border-image-source: linear-gradient(90deg, #588157, #d3e1a6);
     border-image-slice: 2;
     width: 100%;
-    /* max-width: 1140px; */
 }
 
+/* when active, body's background changes to var dark and text changes to white */
+/* body.active {
+    background: var(--dark-mode);
+    color: #e9ecef;
+} */
+
+/* adjustments to header and styling */
 header {
     margin: 0;
     padding: 20px;
@@ -32,18 +42,28 @@ header {
     0 2px 4px 0 rgba(0, 0, 0, 0.12);
 }
 
+/* header h1 adjustments and styling */
 header h1 {
     color: var(--text-color);
     font-size: 35px;
     margin: .5rem;
 }
 
+/* When active, header's background cahnges to dark color and text changes to white */
+/* header.active {
+    background-color: #283618;
+    color: #e9ecef;
+} */
+
+/* navbar flex properties and alignment  */
 nav {
     display: flex;
     align-items: center;
     text-align: center;
+    justify-content: center;
 }
 
+/* navbar attributes, styling, adjustments */
 nav a {
     color: var(--text-color);
     padding: 1rem;
@@ -54,11 +74,57 @@ nav a {
     transition: all 0.4s ease-in-out;
 }
 
+
+/* navbar underline when hovering over links */
 nav a:hover {
     border-bottom: 2px solid var(--text-color);
     top: 10px;
 }
 
+/* text not changing to white when going into dark mode */
+/* a.active {
+    color: var(--background-color);
+} */
+
+/* toggle background positioning, styling, adjustments */
+/* #toggle {
+   position: relative;
+   margin-left: auto;
+   display: block;
+   width: 57px;
+   height: 34px;
+   border-radius: 160px;
+   background: #33272a;
+   transition: 0.5s;
+   cursor: pointer;
+   box-shadow: inset 0 8px 60px rgba(0, 0, 0, 0.1),
+               inset 0 8px 60px rgba(0, 0, 0, 0.1),
+               inset 0 -4px 4px rgba(0, 0, 0, 0.1);
+} */
+
+/* toggle button  positioning, styling, adjustments */
+/* #toggle .indicator {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 35px;
+    height: 35px;
+    background: linear-gradient(to bottom, rgb(140, 128, 128), #222);
+    border-radius: 50%;
+    transform: scale(0.9);
+    box-shadow:rgba(0, 0, 0, 0.5),
+               inset 0 8px 60px rgba(0, 0, 0, 0.1),
+               inset 0 8px 8px rgba(0, 0, 0, 0.1),
+               inset 0 -4px 4px rgba(0, 0, 0, 0.1);
+    transition: 0.5s;
+} */
+
+/* toggle indicator moves to to the right when active */
+/* #toggle.active .indicator {
+    left: 24px;
+} */
+
+/* flex properties for main  */
 main {
     display: flex;
     flex-wrap: wrap;
@@ -66,24 +132,31 @@ main {
     padding: 1rem;
 } 
 
-
+/* h2 styling */
 h2 {
     font-size: 35px;
     text-align: center;
     padding: 12px;
 }
 
+/* h3 styling */
 h3 {
     font-size: 20px;
-    /* text-align: center; */
     padding: 2px;
 }
 
+/* h4 styling */
 h4 {
     font-size: 35px;
     text-align: center;
 }
+/* h5 styling */
+h5 {
+    font-size: 25px;
+    text-align: center;
+}
 
+/* about me section styling and adjustments */
 .about-me {
     border: 2px solid var(--border-color);
     border-radius: 10px;
@@ -91,7 +164,7 @@ h4 {
     margin: 30px 5px 115px 5px;
 }
 
-
+/* about me picture styling and adjustments */
 #pic {
     display: block;
     height: 300px;
@@ -102,24 +175,29 @@ h4 {
     border-radius: 50%;
 }
 
+/* about me bio adjustments */
 #bio {
     padding: 5px;
     margin: 10px;
 }
 
+/* bootcamp outer activities styling and adjustments */
 #activities {
     border: 2px solid var(--border-color);
     border-radius: 10px;
     padding: 1rem;
     margin: 20px;
     margin: 30px 5px 115px 5px;
+    width: 100%;
 }
 
+/* styling for text on bootcamp activites */
 #current {
 text-align: center;
 font-size: 35px;
 }
 
+/* article styling and adjustments  */
 article {
     border: 2px solid #a6d3a6;
     border-radius: 10px;
@@ -129,36 +207,38 @@ article {
     margin: 30px 5px 20px 5px;
 }
 
+/* projects outer styling and adjustments */
 #projects {
     border: 2px solid var(--border-color);
     border-radius: 10px;
-    padding: 1rem;
-    margin: 20px;
-    margin: 30px 5px 115px 5px; 
+    padding: 12px;
+    margin: 30px 0px 115px 0px;
+    width: 100%;
 }
 
+/* work flex properties and adjustments */
 #work {
     display: inline-flex;
     flex-wrap: wrap;
-    margin: 30px 5px 115px 5px;
+    margin: 30px -5px 115px -5px;
     justify-content: space-evenly;
+    width: 100%;
 }
 
-img {
-    display: block;
-    height: 150px;
-    width: 200px;
+/* img flex properties and adjustments */
+.imglinks {
+    display: flex;
+    height: 220px;
+    width: 300px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
     border-radius: 21px;
     transition: all 0.5s ease-in-out;
+    opacity: .90;
 }
 
-.imglinks {
-    margin: 10px;
-}
-
+/* limglinks styling when govering over */
 .imglinks:hover {
     box-shadow: inset 0px 0px 8px
     rgb(6, 7, 6),
@@ -166,17 +246,54 @@ img {
     rgb(9, 11, 10)
 }
 
+/* figcaption positioning, styling, and adjustments */
+figcaption {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 1rem;
+    height: 35px;
+    background: rgba(0, 0, 0, 0.5);
+    color: var(--background-color);
+    border-radius: 0 0 1rem 1rem;
+    text-decoration: none;
+    top: -36px;
+}
+
+/* footer styling, positioning */
 footer {
     margin: 0;
     padding: 20px;
     background-color: var(--border-color);
     text-align: center;
     color: var(--text-color);
-    /* flex-wrap: wrap; */
-    /* justify-content: space-between; */
-    /* width: 100%; */
+    flex-wrap: wrap;
+    width: 100%;
 }
 
+/* footer unorder list adjustments */
+footer ul {
+    display: flex;
+    margin: 5px;
+    padding: 10px;
+    justify-content: space-evenly;
+}
+
+/* when active, footer background color and text color change to white */
+footer.active {
+    background-color: #283618;
+    color: #e9ecef;
+}
+
+/* footer image icons adjustments */
+.icons {
+    height: 40px;
+    width: 40px;
+}
+
+/* media queries for when going to smaller screen sizes convert to columns */
 @media screen and (max-width: 768px) {
 main,
 nav {
